# sst

./: .gitignore  .gitmodules  INSTALL  Makefile.am  build_sst.py  configure.ac
config/: .gitignore  ax_boost_base.m4  ax_boost_common.m4  ax_boost_mpi.m4  ax_boost_serialization.m4  ax_boost_thread.m4  ax_cxx_compile_detect.m4  ax_cxx_compile_inline_check.m4  ax_cxx_compile_lambda.m4  ax_cxx_compile_native_check.m4  ax_cxx_compile_rpath_check.m4  ax_cxx_compile_stdcxx_04.m4  ax_cxx_compile_stdcxx_14.m4  ax_cxx_compile_unroll_check.m4  ax_cxx_unknown_pragma_check.m4  sst_check_boost_filesystem.m4  sst_check_boost_mpi_std_string_broken.m4  sst_check_boost_program_options.m4  sst_check_fftw.m4  sst_check_librt.m4  sst_check_paramwarn.m4  sst_check_parmetis.m4  sst_check_sstmacro.m4  sst_check_tcmalloc.m4  sst_check_template_depth.m4  sst_configure_elements.m4  sst_hash_sets.m4  sst_m4_config_include.m4
doc/: .gitignore
sst/: .gitignore
