# -*- Makefile -*-
#
#

ACLOCAL_AMFLAGS = -I config

EXTRA_DIST = \
	autogen.sh \
	BUGS \
	ChangeLog \
	INSTALL \
	ISSUES \
	LICENSE \
	PLATFORMS \
	README \
	VERSION \
	examples/knc-miranda-stream.py \
	examples/snb-miranda.py \
	deps/patches/qsim-0.2.1-fileOpenCheck.patch

SUBDIRS = \
	sst \
	doc 
